// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fbt pronoun support "capitalize" option accepts boolean literal true 1`] = `
import { fbt } from "fbtee";
var x = fbt._(
  /* __FBT__ start */ {
    jsfbt: {
      m: [null],
      t: {
        1: {
          desc: "Capitalized possessive pronoun",
          text: "Her birthday is today.",
        },
        2: {
          desc: "Capitalized possessive pronoun",
          text: "His birthday is today.",
        },
        "*": {
          desc: "Capitalized possessive pronoun",
          text: "Their birthday is today.",
        },
      },
    },
    project: "",
  } /* __FBT__ end */,
  [fbt._pronoun(1, gender)]
);

`;

exports[`fbt pronoun support Should elide false "human" option from fbt.pronoun() 1`] = `
import { fbt } from "fbtee";
var x = fbt._(
  /* __FBT__ start */ {
    jsfbt: {
      m: [null],
      t: {
        1: { desc: "Elided false option", text: "Wish her a happy birthday." },
        2: { desc: "Elided false option", text: "Wish him a happy birthday." },
        "*": {
          desc: "Elided false option",
          text: "Wish them a happy birthday.",
        },
      },
    },
    project: "",
  } /* __FBT__ end */,
  [
    fbt._pronoun(0, gender, {
      human: 1,
    }),
  ]
);

`;
